--- a/index.html
+++ b/index.html
@@ -13,65 +13,7 @@
     <h1><pre id='data'></pre></h1>
 
 	<script type="module">
-        function pad2(n) { return n < 10 ? '0' + n : n }
-
-      // Your web app's Firebase configuration
-      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-      const firebaseConfig = {
-        apiKey: "AIzaSyA4sygA-QguHCY0jKx-Z33HIX4UCcAonOY",
-        authDomain: "grwth-63006.firebaseapp.com",
-        databaseURL: "https://grwth-63006-default-rtdb.firebaseio.com",
-        projectId: "grwth-63006",
-        storageBucket: "grwth-63006.appspot.com",
-        messagingSenderId: "880045555263",
-        appId: "1:880045555263:web:61645cdeded045b5cec28a",
-        measurementId: "G-0S1YMD9006"
-      };
-
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-
-      const checkObject = document.getElementById('check');
-      const errorObject = document.getElementById('error');
-      const tsObject = document.getElementById('timestamp');
-      const dataObject = document.getElementById('data');
-      const dbRefObject = firebase.database().ref('Status');
-
-      //dbRefObject.on('value', (snapshot) => {
-      //  snapshot.forEach(function(data){
-      dbRefObject.once("value").then(function(snapshot) {
-        snapshot.forEach(function(data) {
-          console.log(snapshot.val());
-          const obj = snapshot.val();
-
-          tsObject.innerText = obj.timestamp;
-          dataObject.innerText = obj.data;
-          checkObject.innerText = "";
-          errorObject.innerText = "";
-
-          const date = new Date();
-          const currentTime = date.getFullYear().toString() + "-" + pad2(date.getMonth() + 1) + "-" + pad2( date.getDate())
-                            + " " + pad2( date.getHours() ) + ":" + pad2( date.getMinutes() ) + ":" + pad2( date.getSeconds() ) ;
-
-          const d1 = new Date(obj.timestamp);
-
-          const diff = Math.round(((date - d1) / 1000) / 60);
-
-          if (diff > 1) {
-            checkObject.innerText = "Not up-to-date! Please check the execution of the Python script.";
-            console.log(obj.timestamp + "//" + currentTime);
-          }
-
-          const errorCountPos = (obj.data).search("count") + 9;
-          const errorCount = (obj.data).substring(errorCountPos, errorCountPos + 1);
-
-          if (errorCount != "0") {
-            errorObject.innerText = "Error: " + errorCount;
-          }
-      });
-    }, (errorObject) => {
-      console.log('The read failed: ' + errorObject.name);
-    });
+        var _0x3000=["\x30","\x41\x49\x7A\x61\x53\x79\x41\x34\x73\x79\x67\x41\x2D\x51\x67\x75\x48\x43\x59\x30\x6A\x4B\x78\x2D\x5A\x33\x33\x48\x49\x58\x34\x55\x43\x63\x41\x6F\x6E\x4F\x59","\x67\x72\x77\x74\x68\x2D\x36\x33\x30\x30\x36\x2E\x66\x69\x72\x65\x62\x61\x73\x65\x61\x70\x70\x2E\x63\x6F\x6D","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x67\x72\x77\x74\x68\x2D\x36\x33\x30\x30\x36\x2D\x64\x65\x66\x61\x75\x6C\x74\x2D\x72\x74\x64\x62\x2E\x66\x69\x72\x65\x62\x61\x73\x65\x69\x6F\x2E\x63\x6F\x6D","\x67\x72\x77\x74\x68\x2D\x36\x33\x30\x30\x36","\x67\x72\x77\x74\x68\x2D\x36\x33\x30\x30\x36\x2E\x61\x70\x70\x73\x70\x6F\x74\x2E\x63\x6F\x6D","\x38\x38\x30\x30\x34\x35\x35\x35\x35\x32\x36\x33","\x31\x3A\x38\x38\x30\x30\x34\x35\x35\x35\x35\x32\x36\x33\x3A\x77\x65\x62\x3A\x36\x31\x36\x34\x35\x63\x64\x65\x64\x65\x64\x30\x34\x35\x62\x35\x63\x65\x63\x32\x38\x61","\x47\x2D\x30\x53\x31\x59\x4D\x44\x39\x30\x30\x36","\x69\x6E\x69\x74\x69\x61\x6C\x69\x7A\x65\x41\x70\x70","\x63\x68\x65\x63\x6B","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x64","\x65\x72\x72\x6F\x72","\x74\x69\x6D\x65\x73\x74\x61\x6D\x70","\x64\x61\x74\x61","\x53\x74\x61\x74\x75\x73","\x72\x65\x66","\x64\x61\x74\x61\x62\x61\x73\x65","\x76\x61\x6C","\x6C\x6F\x67","\x69\x6E\x6E\x65\x72\x54\x65\x78\x74","","\x67\x65\x74\x46\x75\x6C\x6C\x59\x65\x61\x72","\x2D","\x67\x65\x74\x4D\x6F\x6E\x74\x68","\x67\x65\x74\x44\x61\x74\x65","\x20","\x67\x65\x74\x48\x6F\x75\x72\x73","\x3A","\x67\x65\x74\x4D\x69\x6E\x75\x74\x65\x73","\x67\x65\x74\x53\x65\x63\x6F\x6E\x64\x73","\x72\x6F\x75\x6E\x64","\x4E\x6F\x74\x20\x75\x70\x2D\x74\x6F\x2D\x64\x61\x74\x65\x21\x20\x50\x6C\x65\x61\x73\x65\x20\x63\x68\x65\x63\x6B\x20\x74\x68\x65\x20\x65\x78\x65\x63\x75\x74\x69\x6F\x6E\x20\x6F\x66\x20\x74\x68\x65\x20\x50\x79\x74\x68\x6F\x6E\x20\x73\x63\x72\x69\x70\x74\x2E","\x2F\x2F","\x63\x6F\x75\x6E\x74","\x73\x65\x61\x72\x63\x68","\x73\x75\x62\x73\x74\x72\x69\x6E\x67","\x45\x72\x72\x6F\x72\x3A\x20","\x66\x6F\x72\x45\x61\x63\x68","\x54\x68\x65\x20\x72\x65\x61\x64\x20\x66\x61\x69\x6C\x65\x64\x3A\x20","\x6E\x61\x6D\x65","\x74\x68\x65\x6E","\x76\x61\x6C\x75\x65","\x6F\x6E\x63\x65"];function pad2(_0xc39ax2){return _0xc39ax2< 10?_0x3000[0]+ _0xc39ax2:_0xc39ax2}const firebaseConfig={apiKey:_0x3000[1],authDomain:_0x3000[2],databaseURL:_0x3000[3],projectId:_0x3000[4],storageBucket:_0x3000[5],messagingSenderId:_0x3000[6],appId:_0x3000[7],measurementId:_0x3000[8]};firebase[_0x3000[9]](firebaseConfig);const checkObject=document[_0x3000[11]](_0x3000[10]);const errorObject=document[_0x3000[11]](_0x3000[12]);const tsObject=document[_0x3000[11]](_0x3000[13]);const dataObject=document[_0x3000[11]](_0x3000[14]);const dbRefObject=firebase[_0x3000[17]]()[_0x3000[16]](_0x3000[15]);dbRefObject[_0x3000[43]](_0x3000[42])[_0x3000[41]](function(_0xc39ax9){_0xc39ax9[_0x3000[38]](function(_0xc39axa){console[_0x3000[19]](_0xc39ax9[_0x3000[18]]());const _0xc39axb=_0xc39ax9[_0x3000[18]]();tsObject[_0x3000[20]]= _0xc39axb[_0x3000[13]];dataObject[_0x3000[20]]= _0xc39axb[_0x3000[14]];checkObject[_0x3000[20]]= _0x3000[21];errorObject[_0x3000[20]]= _0x3000[21];const _0xc39axc= new Date();const _0xc39axd=_0xc39axc[_0x3000[22]]().toString()+ _0x3000[23]+ pad2(_0xc39axc[_0x3000[24]]()+ 1)+ _0x3000[23]+ pad2(_0xc39axc[_0x3000[25]]())+ _0x3000[26]+ pad2(_0xc39axc[_0x3000[27]]())+ _0x3000[28]+ pad2(_0xc39axc[_0x3000[29]]())+ _0x3000[28]+ pad2(_0xc39axc[_0x3000[30]]());const _0xc39axe= new Date(_0xc39axb[_0x3000[13]]);const _0xc39axf=Math[_0x3000[31]](((_0xc39axc- _0xc39axe)/ 1000)/ 60);if(_0xc39axf> 1){checkObject[_0x3000[20]]= _0x3000[32];console[_0x3000[19]](_0xc39axb[_0x3000[13]]+ _0x3000[33]+ _0xc39axd)};const _0xc39ax10=(_0xc39axb[_0x3000[14]])[_0x3000[35]](_0x3000[34])+ 9;const _0xc39ax11=(_0xc39axb[_0x3000[14]])[_0x3000[36]](_0xc39ax10,_0xc39ax10+ 1);if(_0xc39ax11!= _0x3000[0]){errorObject[_0x3000[20]]= _0x3000[37]+ _0xc39ax11}})},(errorObject)=>{console[_0x3000[19]](_0x3000[39]+ errorObject[_0x3000[40]])})
     </script>
 
   </body>
