--- a/grwth_stat.html
+++ b/grwth_stat.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
 	<script src="https://www.gstatic.com/firebasejs/5.5.1/firebase.js"></script>
     <meta http-equiv="refresh" content="60">
-    <title>Server's Status</title>
+    <title>Grwth Server's Status</title>
   </head>
   <body>
 	<h1><pre style="color:red;" id='check'></pre></h1>
