--- a/grwth_stat.html
+++ b/grwth_stat.html
@@ -13,7 +13,73 @@
     <h1><pre id='data'></pre></h1>
 
 	<script type="module">
-        function _0x187e(_0x2272c5,_0x31254c){const _0x5a989f=_0x1ec5();return _0x187e=function(_0x352cc0,_0x301157){_0x352cc0=_0x352cc0-(0xe01+-0x2be+-0xac8);let _0x5a97df=_0x5a989f[_0x352cc0];return _0x5a97df;},_0x187e(_0x2272c5,_0x31254c);}function _0x1ec5(){const _0x3be842=['wth-63006-','6.appspot.','getDate','cRwPl','jKhbo','App','386306PuBIxF','JQzZk','initialize','h.hk/statu','The\x20read\x20f','t:\x20','518316dZloap','6.firebase','Not\x20up-to-','ref','https://gr','he\x20executi','se\x20check\x20t','code','ipt\x20grwth_','1:88004555','68248MMTBPH','eEAsM','getSeconds','1442592JiZlFF','//app.grwt','then','16057525JuXrWi','val','748DpjaSb','RnPjZ','No\x20content','at2.html','t2.html','BRBXM','rcKSY','getHours','error','count','check','data','tLOst','jUzYV','forEach','t\x20updated\x20','308dFXuOM','emoAg','once','cNaMx','default-rt','timestamp','jKx-Z33HIX','3kbNlyD','AIzaSyA4sy','ById','date!\x20Plea','TjaSg','in\x20https:/','Status','cpKDL','Python\x20scr','vsUTx','7426566wSbZOr','19910ljpHHW','getMonth','eio.com','substring','4UCcAonOY','toString','ykgPk','getElement','grwth-6300','com','value','search','5263:web:6','s/grwth_st','name','wgtQH','QuWsu','cDFsf','/app.grwth','db.firebas','Content\x20no','G-0S1YMD90','1645cdeded','log','.hk/status','10qOovQW','\x20in\x20https:','nnJde','stat.py.','RuELC','database','HjOCx','045b5cec28','round','getFullYea','getMinutes','qlQNr','gA-QguHCY0','/grwth_sta','on\x20of\x20the\x20','EDFNa','ailed:\x20','app.com','Error\x20Coun','innerText','8800455552'];_0x1ec5=function(){return _0x3be842;};return _0x1ec5();}const _0x54d6f1=_0x187e;(function(_0x5bce8f,_0x3ae86b){const _0x365698=_0x187e,_0x4ef6a9=_0x5bce8f();while(!![]){try{const _0x480cac=-parseInt(_0x365698(0xb4))/(0xa*0x3d9+0xb*0xd3+-0x2f8a)*(-parseInt(_0x365698(0x85))/(0x1fba*0x1+0x1b65+-0x3b1d))+-parseInt(_0x365698(0x8b))/(0x805*0x1+0x1522+-0x1d24)+parseInt(_0x365698(0x9d))/(0x209d+0x2*0x532+0x2afd*-0x1)*(-parseInt(_0x365698(0xbf))/(0x12d+-0x1e8c+-0x72*-0x42))+-parseInt(_0x365698(0x98))/(0x5*0xd8+-0x2*0x1d+-0x3f8)+parseInt(_0x365698(0xad))/(-0xd*0x1a0+-0x2080+-0x14f*-0x29)*(parseInt(_0x365698(0x95))/(-0xbed+0x143+0x25*0x4a))+-parseInt(_0x365698(0xbe))/(-0x46*-0x6+0x3a5*0x2+-0x21*0x45)+-parseInt(_0x365698(0xd8))/(0x5*0x6fb+-0x5*-0x74f+0x2*-0x23b4)*(-parseInt(_0x365698(0x9b))/(0x1dfc+-0x25ab*0x1+0x7ba));if(_0x480cac===_0x3ae86b)break;else _0x4ef6a9['push'](_0x4ef6a9['shift']());}catch(_0x54d5e7){_0x4ef6a9['push'](_0x4ef6a9['shift']());}}}(_0x1ec5,0x667ba+0x113e*0xbc+0x20*-0x63db));function pad2(_0x2b15c3){const _0x537b1d=_0x187e,_0x5145d1={'cDFsf':function(_0xb04e59,_0x24f456){return _0xb04e59<_0x24f456;},'vsUTx':function(_0x5482ab,_0x3bdce8){return _0x5482ab+_0x3bdce8;}};return _0x5145d1[_0x537b1d(0xd0)](_0x2b15c3,0x4*0x677+0x23c+-0x1c0e)?_0x5145d1[_0x537b1d(0xbd)]('0',_0x2b15c3):_0x2b15c3;}const firebaseConfig={'apiKey':_0x54d6f1(0xb5)+_0x54d6f1(0xe4)+_0x54d6f1(0xb3)+_0x54d6f1(0xc3),'authDomain':_0x54d6f1(0xc7)+_0x54d6f1(0x8c)+_0x54d6f1(0x7b),'databaseURL':_0x54d6f1(0x8f)+_0x54d6f1(0x7f)+_0x54d6f1(0xb1)+_0x54d6f1(0xd2)+_0x54d6f1(0xc1),'projectId':_0x54d6f1(0xc7)+'6','storageBucket':_0x54d6f1(0xc7)+_0x54d6f1(0x80)+_0x54d6f1(0xc8),'messagingSenderId':_0x54d6f1(0x7e)+'63','appId':_0x54d6f1(0x94)+_0x54d6f1(0xcb)+_0x54d6f1(0xd5)+_0x54d6f1(0xdf)+'a','measurementId':_0x54d6f1(0xd4)+'06'};firebase[_0x54d6f1(0x87)+_0x54d6f1(0x84)](firebaseConfig);const checkObject=document[_0x54d6f1(0xc6)+_0x54d6f1(0xb6)](_0x54d6f1(0xa7)),errorObject=document[_0x54d6f1(0xc6)+_0x54d6f1(0xb6)](_0x54d6f1(0xa5)),tsObject=document[_0x54d6f1(0xc6)+_0x54d6f1(0xb6)](_0x54d6f1(0xb2)),dataObject=document[_0x54d6f1(0xc6)+_0x54d6f1(0xb6)](_0x54d6f1(0xa8)),dbRefObject=firebase[_0x54d6f1(0xdd)]()[_0x54d6f1(0x8e)](_0x54d6f1(0xba));dbRefObject[_0x54d6f1(0xaf)](_0x54d6f1(0xc9))[_0x54d6f1(0x9a)](function(_0x32762e){const _0x34887c=_0x54d6f1,_0x446f36={'cRwPl':function(_0x24982a,_0x2da281){return _0x24982a+_0x2da281;},'wgtQH':function(_0x4da0c2,_0x12585e){return _0x4da0c2+_0x12585e;},'HjOCx':function(_0x47d79d,_0x386459){return _0x47d79d+_0x386459;},'JQzZk':function(_0x4a9e1a,_0x5b5709){return _0x4a9e1a(_0x5b5709);},'nnJde':function(_0x52f999,_0x109c32){return _0x52f999(_0x109c32);},'cpKDL':function(_0x14ebc4,_0x3b6c2b){return _0x14ebc4(_0x3b6c2b);},'RnPjZ':function(_0x20355b,_0x43969d){return _0x20355b(_0x43969d);},'jKhbo':function(_0x5e4fe6,_0x336964){return _0x5e4fe6/_0x336964;},'rcKSY':function(_0x5b308c,_0x3ebac5){return _0x5b308c-_0x3ebac5;},'qlQNr':_0x34887c(0xa6),'tLOst':function(_0x42d68b,_0x29f710){return _0x42d68b+_0x29f710;},'TjaSg':function(_0x1df1d9,_0x1b3fa8){return _0x1df1d9>_0x1b3fa8;},'emoAg':_0x34887c(0x8d)+_0x34887c(0xb7)+_0x34887c(0x91)+_0x34887c(0x90)+_0x34887c(0xe6)+_0x34887c(0xbc)+_0x34887c(0x93)+_0x34887c(0xdb),'EDFNa':function(_0x4fe9a7,_0x4166fa){return _0x4fe9a7+_0x4166fa;},'BRBXM':function(_0x19cbb2,_0x18412b){return _0x19cbb2+_0x18412b;},'eEAsM':function(_0x4a654c,_0x381944){return _0x4a654c==_0x381944;},'RuELC':_0x34887c(0x7c)+_0x34887c(0x8a),'jUzYV':_0x34887c(0x9f)+_0x34887c(0xd9)+_0x34887c(0x99)+_0x34887c(0x88)+_0x34887c(0xcc)+_0x34887c(0xa0),'ykgPk':_0x34887c(0xd3)+_0x34887c(0xac)+_0x34887c(0xb9)+_0x34887c(0xd1)+_0x34887c(0xd7)+_0x34887c(0xe5)+_0x34887c(0xa1)};_0x32762e[_0x34887c(0xab)](function(_0x35adf2){const _0x401087=_0x34887c;console[_0x401087(0xd6)](_0x32762e[_0x401087(0x9c)]());const _0x2b9ce9=_0x32762e[_0x401087(0x9c)]();tsObject[_0x401087(0x7d)]=_0x2b9ce9[_0x401087(0xb2)],dataObject[_0x401087(0x7d)]=_0x2b9ce9[_0x401087(0xa8)],checkObject[_0x401087(0x7d)]='',errorObject[_0x401087(0x7d)]='';const _0x5a2230=_0x2b9ce9[_0x401087(0x92)],_0x5e2de5=new Date(),_0x2b4a62=_0x446f36[_0x401087(0x82)](_0x446f36[_0x401087(0x82)](_0x446f36[_0x401087(0xce)](_0x446f36[_0x401087(0xde)](_0x446f36[_0x401087(0x82)](_0x446f36[_0x401087(0xce)](_0x446f36[_0x401087(0xce)](_0x446f36[_0x401087(0x82)](_0x446f36[_0x401087(0x82)](_0x446f36[_0x401087(0xce)](_0x5e2de5[_0x401087(0xe1)+'r']()[_0x401087(0xc4)](),'-'),_0x446f36[_0x401087(0x86)](pad2,_0x446f36[_0x401087(0xce)](_0x5e2de5[_0x401087(0xc0)](),0x25d8+0x5e0*0x6+-0x3f*0x129))),'-'),_0x446f36[_0x401087(0x86)](pad2,_0x5e2de5[_0x401087(0x81)]())),'\x20'),_0x446f36[_0x401087(0xda)](pad2,_0x5e2de5[_0x401087(0xa4)]())),':'),_0x446f36[_0x401087(0xbb)](pad2,_0x5e2de5[_0x401087(0xe2)]())),':'),_0x446f36[_0x401087(0x9e)](pad2,_0x5e2de5[_0x401087(0x97)]())),_0x44a968=new Date(_0x2b9ce9[_0x401087(0xb2)]),_0x2599b8=Math[_0x401087(0xe0)](_0x446f36[_0x401087(0x83)](_0x446f36[_0x401087(0x83)](_0x446f36[_0x401087(0xa3)](_0x5e2de5,_0x44a968),0x70a+-0x3b5+0x93*0x1),-0x2516+0x496+-0x5*-0x68c)),_0x1cabd5=_0x446f36[_0x401087(0xde)](_0x2b9ce9[_0x401087(0xa8)][_0x401087(0xca)](_0x446f36[_0x401087(0xe3)]),0x1fce+0x177f+-0x3744),_0x5120b6=_0x2b9ce9[_0x401087(0xa8)][_0x401087(0xc2)](_0x1cabd5,_0x446f36[_0x401087(0xa9)](_0x1cabd5,0xc80+-0x2472+0x17f3));if(_0x446f36[_0x401087(0xb8)](_0x2599b8,-0x1e77+0x28*-0xe+0x20a9))checkObject[_0x401087(0x7d)]=_0x446f36[_0x401087(0xae)],console[_0x401087(0xd6)](_0x446f36[_0x401087(0xe7)](_0x446f36[_0x401087(0xa2)](_0x2b9ce9[_0x401087(0xb2)],'//'),_0x2b4a62));else{if(_0x446f36[_0x401087(0x96)](_0x5a2230,0x1a53+-0xaff+-0xf53))errorObject[_0x401087(0x7d)]=_0x446f36[_0x401087(0xa2)](_0x446f36[_0x401087(0xdc)],_0x5120b6);else{if(_0x446f36[_0x401087(0x96)](_0x5a2230,-0xd*0x12b+0x1c8b+-0xd5a))checkObject[_0x401087(0x7d)]=_0x446f36[_0x401087(0xaa)];else _0x446f36[_0x401087(0x96)](_0x5a2230,0x28f+-0xb*-0x1f6+-0x181e)?checkObject[_0x401087(0x7d)]=_0x446f36[_0x401087(0xc5)]:checkObject[_0x401087(0x7d)]='';}}});},_0x1025dc=>{const _0x2213dc=_0x54d6f1,_0x18e29f={'QuWsu':function(_0x5d165c,_0x1cb8b3){return _0x5d165c+_0x1cb8b3;},'cNaMx':_0x2213dc(0x89)+_0x2213dc(0xe8)};console[_0x2213dc(0xd6)](_0x18e29f[_0x2213dc(0xcf)](_0x18e29f[_0x2213dc(0xb0)],_0x1025dc[_0x2213dc(0xcd)]));});
+        function pad2(n) { return n < 10 ? '0' + n : n }
+
+          // Your web app's Firebase configuration
+          // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+          const firebaseConfig = {
+            apiKey: "AIzaSyA4sygA-QguHCY0jKx-Z33HIX4UCcAonOY",
+            authDomain: "grwth-63006.firebaseapp.com",
+            databaseURL: "https://grwth-63006-default-rtdb.firebaseio.com",
+            projectId: "grwth-63006",
+            storageBucket: "grwth-63006.appspot.com",
+            messagingSenderId: "880045555263",
+            appId: "1:880045555263:web:61645cdeded045b5cec28a",
+            measurementId: "G-0S1YMD9006"
+          };
+
+          // Initialize Firebase
+          firebase.initializeApp(firebaseConfig);
+
+          const checkObject = document.getElementById('check');
+          const errorObject = document.getElementById('error');
+          const tsObject = document.getElementById('timestamp');
+          const dataObject = document.getElementById('data');
+          const dbRefObject = firebase.database().ref('Status');
+
+          dbRefObject.once("value").then(function(snapshot) {
+            snapshot.forEach(function(data) {
+              console.log(snapshot.val());
+              const obj = snapshot.val();
+
+              tsObject.innerText = obj.timestamp;
+              dataObject.innerText = obj.data;
+              checkObject.innerText = "";
+              errorObject.innerText = "";
+              const code = obj.code;
+
+              const date = new Date();
+              const currentTime = date.getFullYear().toString() + "-" + pad2(date.getMonth() + 1) + "-" + pad2( date.getDate())
+                                + " " + pad2( date.getHours() ) + ":" + pad2( date.getMinutes() ) + ":" + pad2( date.getSeconds() ) ;
+
+              const d1 = new Date(obj.timestamp);
+
+              const diff = Math.round(((date - d1) / 1000) / 60);
+
+              const errorCountPos = (obj.data).search("count") + 9;
+              const errorCount = (obj.data).substring(errorCountPos, errorCountPos + 1);
+
+              if (diff > 2) {
+                checkObject.innerText = "Not up-to-date! Please check the execution of the Python script grwth_stat.py.";
+                console.log(obj.timestamp + "//" + currentTime);
+              }
+              else if (code == 1) {
+                errorObject.innerText = "Error Count: " + errorCount;
+              }
+              else if (code == 2) {
+                checkObject.innerText = "No content in https://app.grwth.hk/status/grwth_stat2.html";
+              }
+              else if (code == 3) {
+                checkObject.innerText = "Content not updated in https://app.grwth.hk/status/grwth_stat2.html";
+              }
+              else {
+                checkObject.innerText = "";
+              }
+
+          });
+        }, (errorObject) => {
+          console.log('The read failed: ' + errorObject.name);
+        });
     </script>
 
   </body>
