--- a/kdg_stat.html
+++ b/kdg_stat.html
@@ -13,7 +13,78 @@
     <h1><div id='data'></div></h1>
 
 	<script type="module">
-        const _0x4519da=_0x47e4;(function(_0xbd087e,_0x401ed3){const _0x33979c=_0x47e4,_0x369509=_0xbd087e();while(!![]){try{const _0x586aef=-parseInt(_0x33979c(0x203))/(-0x4b3*-0x2+0xe8d*-0x1+0x528)+-parseInt(_0x33979c(0x1f9))/(0x128c+0xe24*-0x1+-0x466)+-parseInt(_0x33979c(0x207))/(0x2*-0xf00+0x12*-0x72+-0x37*-0xb1)*(-parseInt(_0x33979c(0x1df))/(0x27b*0xc+0x171c+-0x31c*0x11))+parseInt(_0x33979c(0x1e8))/(-0x55+-0x5*-0x7be+0x5*-0x7ac)+parseInt(_0x33979c(0x20b))/(-0xfb8*0x2+-0x1610+0x3586)+parseInt(_0x33979c(0x1a7))/(0x1910*0x1+0x1*-0x1be3+0x2*0x16d)+-parseInt(_0x33979c(0x1e2))/(0x19c*-0x18+0x1f25+0x783);if(_0x586aef===_0x401ed3)break;else _0x369509['push'](_0x369509['shift']());}catch(_0x582b9e){_0x369509['push'](_0x369509['shift']());}}}(_0x58d0,0x3*0x23fb1+0x60b9a+0x8216f*-0x1));function _0x47e4(_0x488199,_0x1c3af4){const _0x15f6ed=_0x58d0();return _0x47e4=function(_0xa8b595,_0x1dff5a){_0xa8b595=_0xa8b595-(0x3a*0x21+0x29*0xe7+-0x2ada);let _0x507710=_0x15f6ed[_0xa8b595];return _0x507710;},_0x47e4(_0x488199,_0x1c3af4);}function pad2(_0x24a9bf){const _0x445529=_0x47e4,_0xf007a1={'VHYTO':function(_0x5eb5fd,_0x3f47be){return _0x5eb5fd<_0x3f47be;},'ufkHP':function(_0xa0f49b,_0x50e047){return _0xa0f49b+_0x50e047;}};return _0xf007a1[_0x445529(0x1b9)](_0x24a9bf,0x1355+-0x21e3+0xe98)?_0xf007a1[_0x445529(0x1b0)]('0',_0x24a9bf):_0x24a9bf;}const firebaseConfig={'apiKey':_0x4519da(0x1af)+_0x4519da(0x1c8)+_0x4519da(0x1f4)+_0x4519da(0x1dd),'authDomain':_0x4519da(0x1d2)+_0x4519da(0x1a1)+_0x4519da(0x1cf),'databaseURL':_0x4519da(0x1a4)+_0x4519da(0x1c4)+_0x4519da(0x1ed)+_0x4519da(0x1f3)+_0x4519da(0x1f8),'projectId':_0x4519da(0x1d2)+'6','storageBucket':_0x4519da(0x1d2)+_0x4519da(0x1ab)+_0x4519da(0x1d1),'messagingSenderId':_0x4519da(0x210)+'63','appId':_0x4519da(0x1b5)+_0x4519da(0x1dc)+_0x4519da(0x215)+_0x4519da(0x205)+'a','measurementId':_0x4519da(0x1c9)+'06'};firebase[_0x4519da(0x1ec)+_0x4519da(0x216)](firebaseConfig);const checkObject=document[_0x4519da(0x1a3)+_0x4519da(0x1e9)](_0x4519da(0x1ee)),errorObject=document[_0x4519da(0x1a3)+_0x4519da(0x1e9)](_0x4519da(0x1bb)),tsObject=document[_0x4519da(0x1a3)+_0x4519da(0x1e9)](_0x4519da(0x1c2)),dataObject=document[_0x4519da(0x1a3)+_0x4519da(0x1e9)](_0x4519da(0x1de)),dbRefObject=firebase[_0x4519da(0x1b8)]()[_0x4519da(0x1e1)](_0x4519da(0x1fc));dbRefObject[_0x4519da(0x1f6)](_0x4519da(0x1e0))[_0x4519da(0x214)](function(_0x54001b){const _0x2735e1=_0x4519da,_0x4f50b7={'EacWL':function(_0x5a2555,_0x1396ed){return _0x5a2555+_0x1396ed;},'oUCud':function(_0x177aae,_0x1c45d4){return _0x177aae+_0x1c45d4;},'GZgPC':function(_0x3f19c1,_0x3a128a){return _0x3f19c1+_0x3a128a;},'YCSeb':function(_0xb2f257,_0x25b175){return _0xb2f257+_0x25b175;},'IpkPP':function(_0x28073e,_0x269bfd){return _0x28073e+_0x269bfd;},'OvRIB':function(_0x4f834f,_0xe23660){return _0x4f834f+_0xe23660;},'YHppC':function(_0x159d10,_0x56da23){return _0x159d10+_0x56da23;},'iqxDs':function(_0x246a02,_0x23c8e5){return _0x246a02+_0x23c8e5;},'OYFrq':function(_0xfcce72,_0x409495){return _0xfcce72(_0x409495);},'ddtXw':function(_0x4c1987,_0x34a48e){return _0x4c1987(_0x34a48e);},'YzKID':function(_0x2a1b6e,_0x3c56da){return _0x2a1b6e/_0x3c56da;},'NIOgg':function(_0x160f35,_0x38414c){return _0x160f35/_0x38414c;},'vFvdh':function(_0x145ad4,_0x15386b){return _0x145ad4-_0x15386b;},'rXLmt':_0x2735e1(0x1e6),'aLUEz':_0x2735e1(0x1ce),'RVixb':function(_0x1b8b00,_0x46d4c8){return _0x1b8b00>_0x46d4c8;},'yskZX':_0x2735e1(0x1a6)+_0x2735e1(0x1c0)+_0x2735e1(0x1c7)+_0x2735e1(0x1fb)+_0x2735e1(0x1bd)+_0x2735e1(0x209)+_0x2735e1(0x1b6)+_0x2735e1(0x1c1),'wXARB':function(_0x77b3bd,_0x39b665){return _0x77b3bd+_0x39b665;},'qqYSe':function(_0x460e5d,_0x5a5e36){return _0x460e5d==_0x5a5e36;},'zJDXI':_0x2735e1(0x1d3)+_0x2735e1(0x1db)+_0x2735e1(0x1ad)+_0x2735e1(0x1b4),'qZxuw':function(_0x4fa42b,_0x3ea633){return _0x4fa42b>_0x3ea633;},'ULnNR':_0x2735e1(0x1a9)+_0x2735e1(0x1ff)+_0x2735e1(0x1fd)+_0x2735e1(0x1ea)+_0x2735e1(0x1b2),'CgePW':function(_0x47f6af,_0xa238fc){return _0x47f6af==_0xa238fc;},'AFtGA':_0x2735e1(0x1ae)+_0x2735e1(0x213)+_0x2735e1(0x1f7)+_0x2735e1(0x1bf)+_0x2735e1(0x20e),'SkZYT':function(_0x3045b2,_0x1bfe18){return _0x3045b2==_0x1bfe18;},'eJjmB':_0x2735e1(0x1c5)+_0x2735e1(0x201)+_0x2735e1(0x1f5)+_0x2735e1(0x1f1)+_0x2735e1(0x1eb)+_0x2735e1(0x1ef)};_0x54001b[_0x2735e1(0x1bc)](function(_0x1359e1){const _0x427a92=_0x2735e1;console[_0x427a92(0x1cd)](_0x54001b[_0x427a92(0x1b3)]());const _0x152299=_0x54001b[_0x427a92(0x1b3)]();tsObject[_0x427a92(0x206)]=_0x152299[_0x427a92(0x1c2)],dataObject[_0x427a92(0x19f)]=_0x152299[_0x427a92(0x1de)],checkObject[_0x427a92(0x206)]='',errorObject[_0x427a92(0x206)]='';const _0x405b02=_0x152299[_0x427a92(0x1e7)],_0x572334=new Date(),_0x5f511c=_0x4f50b7[_0x427a92(0x1d8)](_0x4f50b7[_0x427a92(0x1ca)](_0x4f50b7[_0x427a92(0x1d8)](_0x4f50b7[_0x427a92(0x202)](_0x4f50b7[_0x427a92(0x1fa)](_0x4f50b7[_0x427a92(0x1ca)](_0x4f50b7[_0x427a92(0x1fe)](_0x4f50b7[_0x427a92(0x1cc)](_0x4f50b7[_0x427a92(0x204)](_0x4f50b7[_0x427a92(0x20a)](_0x572334[_0x427a92(0x1f2)+'r']()[_0x427a92(0x1be)](),'-'),_0x4f50b7[_0x427a92(0x1c3)](pad2,_0x4f50b7[_0x427a92(0x204)](_0x572334[_0x427a92(0x1a8)](),-0x17*0x29+0x26*-0x11+0x636))),'-'),_0x4f50b7[_0x427a92(0x1c3)](pad2,_0x572334[_0x427a92(0x1aa)]())),'\x20'),_0x4f50b7[_0x427a92(0x1c3)](pad2,_0x572334[_0x427a92(0x1d6)]())),':'),_0x4f50b7[_0x427a92(0x1c3)](pad2,_0x572334[_0x427a92(0x1b7)]())),':'),_0x4f50b7[_0x427a92(0x1e3)](pad2,_0x572334[_0x427a92(0x1c6)]())),_0x1125dd=new Date(_0x152299[_0x427a92(0x1c2)]),_0x48c3ee=Math[_0x427a92(0x1da)](_0x4f50b7[_0x427a92(0x20f)](_0x4f50b7[_0x427a92(0x1d5)](_0x4f50b7[_0x427a92(0x1f0)](_0x572334,_0x1125dd),-0x3*0x411+-0x5b*0x62+0x32f1),0x3*0xc0b+-0x1051+-0x1394)),_0x433462=_0x152299[_0x427a92(0x1de)][_0x427a92(0x200)](_0x4f50b7[_0x427a92(0x212)]),_0x115318=_0x152299[_0x427a92(0x1de)][_0x427a92(0x200)](_0x4f50b7[_0x427a92(0x1a5)]);if(_0x4f50b7[_0x427a92(0x208)](_0x48c3ee,0xadd+0x4c5*-0x1+0x616*-0x1))checkObject[_0x427a92(0x206)]=_0x4f50b7[_0x427a92(0x1a0)],console[_0x427a92(0x1cd)](_0x4f50b7[_0x427a92(0x1cc)](_0x4f50b7[_0x427a92(0x20c)](_0x152299[_0x427a92(0x1c2)],'//'),_0x5f511c));else{if(_0x4f50b7[_0x427a92(0x1d9)](_0x405b02,-0x172a+-0x94e+-0x11*-0x1e9))_0x4f50b7[_0x427a92(0x208)](_0x433462,-0xad*0xb+-0x1dd7+0x2546)&&(errorObject[_0x427a92(0x206)]=_0x4f50b7[_0x427a92(0x1d0)]),_0x4f50b7[_0x427a92(0x1d4)](_0x115318,-0x1e13+-0x1051+0x2e64)&&(errorObject[_0x427a92(0x206)]=_0x4f50b7[_0x427a92(0x1ca)](errorObject[_0x427a92(0x206)],_0x4f50b7[_0x427a92(0x20d)]));else{if(_0x4f50b7[_0x427a92(0x1e5)](_0x405b02,0x605*-0x2+-0x1*-0x16db+-0xacf*0x1))checkObject[_0x427a92(0x206)]=_0x4f50b7[_0x427a92(0x1d7)];else _0x4f50b7[_0x427a92(0x211)](_0x405b02,0x1bbb*-0x1+-0x2350+-0x3f0e*-0x1)?checkObject[_0x427a92(0x206)]=_0x4f50b7[_0x427a92(0x1ac)]:checkObject[_0x427a92(0x206)]='';}}});},_0x2437e5=>{const _0x36a490=_0x4519da,_0x5edb92={'kWuCQ':function(_0x5b8440,_0x3fba18){return _0x5b8440+_0x3fba18;},'neFOW':_0x36a490(0x1b1)+_0x36a490(0x1ba)};console[_0x36a490(0x1cd)](_0x5edb92[_0x36a490(0x1a2)](_0x5edb92[_0x36a490(0x1e4)],_0x2437e5[_0x36a490(0x1cb)]));});function _0x58d0(){const _0x2fcf2b=['sts','val','Running\x0a','1:88004555','ipt\x20kdg_st','getMinutes','database','VHYTO','ailed:\x20','error','forEach','on\x20of\x20the\x20','toString','h.hk/statu','date!\x20Plea','at.py.','timestamp','OYFrq','wth-63006-','Content\x20no','getSeconds','se\x20check\x20t','gA-QguHCY0','G-0S1YMD90','oUCud','name','OvRIB','log','000','app.com','zJDXI','com','grwth-6300','Error\x20in\x20P','qZxuw','NIOgg','getHours','AFtGA','EacWL','qqYSe','round','ODS\x20STATUS','5263:web:6','4UCcAonOY','data','19540grbYdC','value','ref','5568240Eowrkf','ddtXw','neFOW','CgePW','不等于','code','2614900avEhTG','ById','de\x20000\x20exi','.hk/status','initialize','default-rt','check','/kdg.html','vFvdh','/kdg.grwth','getFullYea','db.firebas','jKx-Z33HIX','in\x20https:/','once','//kdg.grwt','eio.com','420272JCUCEv','YCSeb','he\x20executi','KDG_Status','\x20Status\x20co','IpkPP','PI\x20STATUS:','search','t\x20updated\x20','GZgPC','386525eIKIfb','YHppC','045b5cec28','innerText','351jzirvA','RVixb','Python\x20scr','iqxDs','1139616itZRgl','wXARB','ULnNR','s/kdg.html','YzKID','8800455552','SkZYT','rXLmt','\x20in\x20https:','then','1645cdeded','App','innerHTML','yskZX','6.firebase','kWuCQ','getElement','https://gr','aLUEz','Not\x20up-to-','2195900rjzTtK','getMonth','Error\x20in\x20A','getDate','6.appspot.','eJjmB',':\x20Count不等于','No\x20content','AIzaSyA4sy','ufkHP','The\x20read\x20f'];_0x58d0=function(){return _0x2fcf2b;};return _0x58d0();}
+        function pad2(n) { return n < 10 ? '0' + n : n }
+
+          // Your web app's Firebase configuration
+          // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+          const firebaseConfig = {
+            apiKey: "AIzaSyA4sygA-QguHCY0jKx-Z33HIX4UCcAonOY",
+            authDomain: "grwth-63006.firebaseapp.com",
+            databaseURL: "https://grwth-63006-default-rtdb.firebaseio.com",
+            projectId: "grwth-63006",
+            storageBucket: "grwth-63006.appspot.com",
+            messagingSenderId: "880045555263",
+            appId: "1:880045555263:web:61645cdeded045b5cec28a",
+            measurementId: "G-0S1YMD9006"
+          };
+
+          // Initialize Firebase
+          firebase.initializeApp(firebaseConfig);
+
+          const checkObject = document.getElementById('check');
+          const errorObject = document.getElementById('error');
+          const tsObject = document.getElementById('timestamp');
+          const dataObject = document.getElementById('data');
+          const dbRefObject = firebase.database().ref('KDG_Status');
+
+          dbRefObject.once("value").then(function(snapshot) {
+            snapshot.forEach(function(data) {
+              console.log(snapshot.val());
+              const obj = snapshot.val();
+
+              tsObject.innerText = obj.timestamp;
+              dataObject.innerHTML = obj.data;
+              checkObject.innerText = "";
+              errorObject.innerText = "";
+              const code = obj.code;
+
+              const date = new Date();
+              const currentTime = date.getFullYear().toString() + "-" + pad2(date.getMonth() + 1) + "-" + pad2( date.getDate())
+                                + " " + pad2( date.getHours() ) + ":" + pad2( date.getMinutes() ) + ":" + pad2( date.getSeconds() ) ;
+
+              const d1 = new Date(obj.timestamp);
+
+              const diff = Math.round(((date - d1) / 1000) / 60);
+
+              const errorCountPos1 = (obj.data).search("不等于");
+              const errorCountPos2 = (obj.data).search("000");
+
+              if (diff > 2) {
+                checkObject.innerText = "Not up-to-date! Please check the execution of the Python script kdg_stat.py.";
+                console.log(obj.timestamp + "//" + currentTime);
+              }
+              else if (code == 1) {
+                if (errorCountPos1 > 0) {
+                  errorObject.innerText = "Error in PODS STATUS: Count不等于Running\n";
+                }
+                if (errorCountPos2 > 0) {
+                  errorObject.innerText = errorObject.innerText + "Error in API STATUS: Status code 000 exists";
+                }
+              }
+              else if (code == 2) {
+                checkObject.innerText = "No content in https://kdg.grwth.hk/status/kdg.html";
+              }
+              else if (code == 3) {
+                checkObject.innerText = "Content not updated in https://kdg.grwth.hk/status/kdg.html";
+              }
+              else {
+                checkObject.innerText = "";
+              }
+
+          });
+        }, (errorObject) => {
+          console.log('The read failed: ' + errorObject.name);
+        });
     </script>
 
   </body>
